--- a/lab6_Paralam.html
+++ b/lab6_Paralam.html
@@ -96,9 +96,8 @@ else {if(number2<0)
     result=number1/number2
     alert( result )
   }
-  else {
-    if(number2== "0")
-  alert("error: division by zero")}
+if(number2 == "0")
+  alert("error: division by zero")
 console.log("")
   </script>
 </body>
