--- a/lab6_Paralam.html
+++ b/lab6_Paralam.html
@@ -65,7 +65,7 @@ var ageFa= prompt("Введи возраст папы.", "")
 var ageMa= prompt("Введи возраст мамы.", "")
 if (ageFa>ageMa)
 console.log("Папа старше мамы.");
-if(ageFa=ageMa)
+else if(ageFa==ageMa)
   console.log("Мои родители- ровесники");
 else
  console.log("Мама старше папы.");
@@ -88,15 +88,11 @@ if (sign== "+"){
   alert( result )
 }
 else if(sign== "/")
-  if(number2>0){
+  if(number2!=0){
     result=number1/number2
     alert( result )
   }
-else {if(number2<0)
-    result=number1/number2
-    alert( result )
-  }
-if(number2 == "0")
+  if(number2 == 0)
   alert("error: division by zero")
 console.log("")
   </script>
